# Pasta

./: .gitignore  pyproject.toml  test.py
pasta/: cli.py  commands.py  core.py
