[project]
name = "pasta"
version = "0.1.0"
description = ""
authors = [
    {name = "abhi-pixel1",email = "bharadwaj.abhi.r@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "reportlab (>=4.2.5,<5.0.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pasta = "pasta.cli:cli" # entrypoint to the CLI